--- a/client/main/src/styles/standard.css
+++ b/client/main/src/styles/standard.css
@@ -1,10 +1,5 @@
-.maincontent{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#landingContent, #registerContent{
+/* CSS for login, register, and landing page */
+#landingContent, #registerContent, #loginContent{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -13,7 +8,7 @@
     min-height: 50vh;
 }
 
-#portalTitle, #registerTitle{
+#portalTitle, #registerTitle, #loginTitle{
     font-size: 72px;
     background: -webkit-linear-gradient(-70deg, #F9957F
     10%, #F2F5D0
@@ -57,3 +52,5 @@
     box-shadow: none;
     transform: translateY(10px);
 }
+
+/* CSS for admin and employee portal */
