--- a/client/main/src/styles/standard.css
+++ b/client/main/src/styles/standard.css
@@ -1,11 +1,17 @@
 /* CSS for login, register, and landing page */
+#mainContent{
+    height: 100%;
+}
+
 #landingContent, #registerContent, #loginContent{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     min-width: 50vw;
-    min-height: 50vh;
+    height: 100%;
+    background-color: #2f363e;
+
 }
 
 #portalTitle, #registerTitle, #loginTitle{
