--- a/client/main/src/styles/standard.css
+++ b/client/main/src/styles/standard.css
@@ -59,4 +59,73 @@
     transform: translateY(10px);
 }
 
+/* CSS for admin and employee portal navbar */
+#employeePortal{
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+}
+
+#sideNav{
+    display: flex;
+    padding-top: 5vh;
+    /* justify-content: center; */
+    flex-direction: column;
+    align-items: center;
+    min-width: 20vw;
+    max-width: 20vw;
+    background-color: #2f363e;
+}
+
+.logout-btn{
+    display: flex;
+    align-items: center;
+    width: 15vw;
+    color: white;
+    position: fixed;
+    bottom: 5vh;
+}
+
+.logout-btn:hover{
+    cursor: pointer;
+}
+
+#logout-img{
+    height: 5vh;
+    width: 3vw;
+}
+
+.nav-item {
+    width: 15vw;
+    text-align: left;
+    color: white;
+    border: 1px solid transparent;
+    padding-left: 2vw;
+    border-radius: 1vh;
+}
+
+.nav-item:hover{
+    cursor: pointer;
+}
+
+.active-status{
+    width: 15vw;
+    text-align: left;
+    color: white;
+    border: 1px solid transparent;
+    padding-left: 2vw;
+    border-radius: 1vh;
+}
+
+.active-status:hover{
+    cursor: default;
+}
+
 /* CSS for admin and employee portal */
+#portalContent{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
