--- a/client/main/src/styles/standard.css
+++ b/client/main/src/styles/standard.css
@@ -6,7 +6,6 @@
 #landingContent, #registerContent, #loginContent{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     min-width: 50vw;
     height: 100%;
@@ -108,7 +107,7 @@
     cursor: pointer;
 }
 
-.active-status{
+.active-status, .nav-title{
     width: 15vw;
     text-align: left;
     color: white;
@@ -117,7 +116,7 @@
     border-radius: 1vh;
 }
 
-.active-status:hover{
+.active-status:hover, .nav-title:hover{
     cursor: default;
 }
 
